tests/tooling/fixtures/native/recovery/negative/negative_unary_plus_bool_operand.objc3
// Expected diagnostic code(s): O3S206.
module NegativeUnaryPlusBoolOperand;

fn main() -> i32 {
  let flag = true;
  return +flag;
}
